@@ -30,6 +30,7 @@ import me.blvckbytes.gpeee.functions.IStandardFunctionRegistry;
 import me.blvckbytes.gpeee.interpreter.IEvaluationEnvironment;
 import org.jetbrains.annotations.Nullable;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -65,7 +66,7 @@ public class SubstringFunction extends AStandardFunction {
 
   @Override
   public @Nullable List<ExpressionFunctionArgument> getArguments() {
-    return List.of(
+    return Arrays.asList(
       new ExpressionFunctionArgument("input", "Input to search in", true, String.class),
       new ExpressionFunctionArgument("start", "Start index (inclusive)", true, Long.class),
       new ExpressionFunctionArgument("end", "End index (exclusive)", false, Long.class)
