@@ -27,23 +27,21 @@ package me.blvckbytes.gpeee.std;
 import me.blvckbytes.gpeee.EnvironmentBuilder;
 import org.junit.jupiter.api.Test;
 
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 
 public class StrFunctionTests {
 
   @Test
   public void shouldStringifyValues() {
     EnvironmentBuilder env = new EnvironmentBuilder()
-      .withStaticVariable("my_list", List.of(1, 2, 3))
-      .withStaticVariable("my_set", Set.of(4, 5, 6))
+      .withStaticVariable("my_list", Arrays.asList(1, 2, 3))
+      .withStaticVariable("my_set", new HashSet<>(Arrays.asList(4, 5, 6)))
       .withStaticVariable("my_array", new Integer[] {7, 8, 9})
-      .withStaticVariable("my_map", Map.of(
-        "One", 1,
-        "Two", 2,
-        "Three", 3
-      ));
+      .withStaticVariable("my_map", new HashMap<Object, Object>() {{
+        put("One", 1);
+        put("Two", 2);
+        put("Three", 3);
+      }});
 
     env.launch(validator -> {
       // Long
